# data-project-template

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
data/: sample_data.csv
doc/source/: conf.py  index.rst
src/: data_analysis.py  data_visualization.py
tests/: test_data_analysis.py
