[project]
name = "data-project-template"
version = "0.1.0"
description = "Python Starter Template for Data Projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
    "sphinx>=8.2.1",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]